this version works ! I must to improve design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Spanish Vocabulary Quiz</string>
+    <string name="questions_title">Questions</string>
 </resources>
